# PGSEncoder

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: BigEdianTypes.h  ColorTools.h  PGSStructures.h  PNGImage.cpp  PNGImage.h  Palette.cpp  Palette.h  main.cpp
